Don't use the "py" module to launch py.test

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = py35,flake8
 deps = pytest
     pytest-asyncio
     pytest-cov
-commands = python -m py.test {posargs}
+commands = python -m pytest {posargs}
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
