--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ upload-dir = docs/_build/html
 
 [tool:pytest]
 addopts = -rsx --cov --tb=short
-norecursedirs = .git .tox .cache build virtualenv docs
+testpaths = tests
 
 [flake8]
 max-line-length = 99
