--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py35,py36,flake8
+envlist = py35, py36, flake8
 
 [tox:travis]
-3.5 = py35, flake8, docs
-3.6-dev = py36
+python =
+    3.5: py35, flake8, docs
+    3.6: py36
 
 [testenv]
 deps = pytest
