--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,35 @@
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
+[metadata]
+name = asyncio_extras
+description = Asynchronous generators, context managers and more for asyncio
+long_description = file: README.rst
+author = Alex Grönholm
+author_email = alex.gronholm@nextday.fi
+url = https://github.com/agronholm/asyncio_extras
+project_urls =
+    Documentation = http://asyncio-extras.readthedocs.io/
+    Bug Tracker = https://github.com/agronholm/asyncio_extras/issues
+license = MIT
+license_file = LICENSE
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
 
-[upload_docs]
-upload-dir = docs/_build/html
+[options.extras_require]
+test =
+    pytest
+    pytest-asyncio
+    pytest-cov
+doc =
+    sphinx-autodoc-typehints
+
+[options]
+packages = find:
+install_requires = async_generator >=  1.3
 
 [tool:pytest]
 addopts = -rsx --cov --tb=short
