--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,9 @@
 [tox]
 envlist = py35, py36, flake8
-
-[tox:travis]
-python =
-    3.5: py35, flake8, docs
-    3.6: py36
+skip_missing_interpreters = true
 
 [testenv]
-deps = pytest
-    pytest-asyncio
-    pytest-cov
+extras = test
 commands = python -m pytest {posargs}
 
 [testenv:docs]
