--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [options.extras_require]
 test =
@@ -29,7 +30,7 @@ doc =
 
 [options]
 packages = find:
-install_requires = async_generator >=  1.3
+install_requires = async_generator >= 1.3
 
 [tool:pytest]
 addopts = -rsx --cov --tb=short
